[tool.poetry]
name = "hiccup"
version = "0.1.0b2"
description = ""
authors = ["ikappaki <ikappaki@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hiccup", from = "src"},
            {include = "hiccup2", from = "src"}]


[tool.poetry.urls]
"Homepage" = "https://github.com/ikappaki/basilisport-hiccup"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.3"
basilisp = ">=0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
